[package]
name = "eb2p" # Elegant planner 2 plan
version = "0.1.0"
edition = "2024"

[lib]
name = "eb2p"
path = "src/lib/lib.rs"

[[bin]]
name = "eb2p_server"
path = "src/bin/server/main.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
